--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,4 @@
-#body{background:-webkit-radial-gradient(center, circle, #917676, #3eca74);background:-moz-radial-gradient(center, circle, #917676, #3eca74);background:-o-radial-gradient(center, circle, #917676, #3eca74);background:radial-gradient(circle at center, #917676, #3eca74)}
+#body {
+  background: radial-gradient(circle at center, #917676, #3eca74);
+}
+/*# sourceMappingURL=style.css.map */
